ws arreglado, ahora renderisa bien

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     
     <div class="container mt-5">
         <h2 class="text-center mb-3">Cargar nuevo producto</h2>
-        <div >
+        <div class="form-gorup" target="noredirect">
             <div class="mb-3">
             <input class="form-control" type="text" name="nombre" id="nombre" placeholder="Nombre">
             </div>
@@ -23,7 +23,7 @@
             <div class="mb-3">
             <input class="form-control" type="text" name="imagen" id="imagen" placeholder="URL Imagen">
             </div>
-            <input class="btn btn-primary" value="Cargar Producto" class="submit"  id="enviarProducto"/>
+            <input class="btn btn-primary" value="Cargar Producto" id="enviarProducto"/>
         </div>
     </div>
     
